js추가, 폴더 구조 변경
js추가, 폴더 구조 변경

--- a/02/index.html
+++ b/02/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <title>Document</title>
+    <title>자바스크립트</title>
+    <script src="./js/02.js"></script>
 </head>
 <body>
     <main class="container">
-        <hgroup>
-            <h1>AI 활용 빅데이터분석 풀스텍 웹서비 SW개발자 양성과정</h1>
-            <h2>부산대학교 K-digital | FrontEnd</h2>
-        </hgroup>
         <article>
-            <ul>
-                <li>08.22 : <a href="01/index.html">pico css 활용 예제</a></li>
-            </ul>
+            <header>
+                <h1 id="ah1">자바스크립트</h1>
+            </header>
+            <button onclick="hello();">자바스크립 클릭</button>
         </article>
     </main>
 </body>
