--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <article>
             <ul>
                 <li>08.22 : <a href="01/index.html">pico css 활용 예제</a></li>
+                <li>08.22 : <a href="02/index.html">자바스크립트 예제</a></li>
             </ul>
         </article>
     </main>
