--- a/04/index.html
+++ b/04/index.html
@@ -7,17 +7,45 @@
     <link rel="stylesheet" href="./04.css">
     <script src="./04.js"></script>
     <title>자바스크립트</title>
+
 </head>
 <body>
     <main class="container">
         <article>
-            <header><h1>주사위게임</h1></header>
-            <div>
+            <header>
+                <hgroup>
+                    <h1>주사위던지기</h1>
+                    <h2>결과보기</h2>
+                </hgroup>
+            </header>
+            <div class="div1">
                 <div id="adiv"></div>
             </div>
             <footer>
+                <!-- Radios -->
+                <fieldset>
+                    <legend>번호선택</legend>
+                    <label for="r1">
+                        <input type="radio" id="r1" name="num" value="1" checked>1
+                    </label>
+                    <label for="r2">
+                        <input type="radio" id="r2" name="num" value="2">2
+                    </label>
+                    <label for="r3">
+                        <input type="radio" id="r3" name="num" value="3">3
+                    </label>
+                    <label for="r4">
+                        <input type="radio" id="r4" name="num" value="4">4
+                    </label>
+                    <label for="r5">
+                        <input type="radio" id="r5" name="num" value="5">5
+                    </label>
+                    <label for="r6">
+                        <input type="radio" id="r6" name="num" value="6">6
+                    </label>
+                </fieldset>
                 <div class="grid">
-                    <button id="bt1" onclick="diceRoll();">주사위던지기</button>
+                <button>확인</button>
                 </div>
             </footer>
         </article>
