--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <main class="container">
         <hgroup>
@@ -14,10 +16,15 @@
         </hgroup>
         <article>
             <ul>
-                <li>08.22 : <a href="01/index.html">pico css 활용 예제</a></li>
-                <li>08.22 : <a href="02/index.html">자바스크립트 예제</a></li>
+                <li>08.22 : <a href="./01/index.html">pico css 활용 예제</a></li>
+                <li>08.22 : <a href="./02/index.html">자바스크립트 예제</a></li>
+                <li>08.24 : <a href="./03/index.html">자바스크립트 DOM CRUD</a></li>
+                <li>08.24 : <a href="./04/index1.html">주사위던지기</a></li>
+                <li>09.05 : <a href="./04/index2.html">주사위던지기(버튼)</a></li>
+                <li>09.05 : <a href="./04/index3.html">주사위던지기(radio버튼)</a></li>
             </ul>
         </article>
     </main>
 </body>
+
 </html>
