폭탄게임 및 영화진흥위원회
폭탄게임 완성, 영화진흥위원회 일일박스오피스 가져오기

--- a/07/index.html
+++ b/07/index.html
@@ -12,23 +12,25 @@
     <main class="container">
         <article>
             <header>
-                <h1>폭탄게임</h1>
-                <h2>게임결과</h2>
+                <hgroup>
+                    <h1>폭탄게임</h1>
+                    <h2></h2>
+                </hgroup>
             </header>
             <div class="row">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
+                <div id="box1"></div>
+                <div id="box2"></div>
+                <div id="box3"></div>
             </div>
             <div class="row">
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
+                <div id="box4"></div>
+                <div id="box5"></div>
+                <div id="box6"></div>
             </div>
             <div class="row">
-                <div>7</div>
-                <div>8</div>
-                <div>9</div>
+                <div id="box7"></div>
+                <div id="box8"></div>
+                <div id="box9"></div>
             </div>
             <footer>
                 <button>폭탄섞기</button>
